--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.16.2",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.1"
   }
 }
