--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start:dev": "nodemon app.js"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mysql": "^2.15.0"
   },
